# jav_trials

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
crtl_module/: README.md  requirements.txt
docs/: VBA_to_Python_MAP.md  ate_status_sequence.puml
src/xls_management/: __init__.py  config.py  is_ole.py  workbook.py
src/xls_management/ate/: data.py  data_de.py  project.py  status.py  status_initializer.py  tracking.py
src/xls_management/ate/om/: __init__.py  absicherungsauftraege.py  avw_vorganenger.py  bsm_data.py  bsm_daten.py  bsm_nachfolger_daten.py  bsm_successor_data.py  db_info.py  fru_timming.py  project_db_info.py  test_case.py  test_environment_evaluation.py  testfaelle.py  verificationskriterium.py  vw_requirement_predecessor.py
src/xls_management/com/: workbook.py
src/xls_management/shell/: ate.py
src/xls_management/tui/: file_picker.py  main.py  msgbox.py  msgbox.tcss  project_form.py  project_form.tcss  yes_no_form.py  yes_no_form.tcss
src/xls_management/utils/: aux.py  color.py  compare_output.py  tools.py
src/xls_management/xlsx/: workbook.py
test/: __init__.py  test_config.py  test_ole.py  test_project_form.py  test_workbook.py
test/data/: Empty.xlsx  example.xlsx  example01.xlsx  example02.xlsx  example_concat.xlsx  example_na.xlsx
test/test_ate/: test_data_de.py  test_tracking.py
test/test_ate/test_om/: test_db_info.py
test/test_pandas/: test_workbook.py
test/test_utils/: test_aux.py  test_compare_output.py  test_tools.py
